--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
  <head></head> 
  <body> 
-  <h1> Hello </h1> 
-  <div>
-   
-   <br> 
-  </div>
+    <form>
+    
+      </form>
   
   <script src="main.js"></script>
  </body>
